# rs-blog

./: Cargo.toml
src/: error.rs  lib.rs  main.rs  model.rs
src/db/: category.rs  db.sql  mod.rs
src/handler/: mod.rs
src/handler/client/: index.rs  mod.rs
src/view/client/: index.rs
templates/client/: base.html  index.html
