[package]
name = "rs-blog"
version = "1.62.0"
authors = ["Rui Zhi <www.zhirui@foxmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.18.2", features = ["full"] }
serde = { version="1.0.137", features = ["derive"] }
axum = "0.5.5"
config = "0.13.1"
dotenv = "0.15"
tokio-postgres = "0.7"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
deadpool-postgres = { version = "0.10", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = "0.3"
pulldown-cmark = "0.9"
askama = "0.11"
